[package]
name = "myn"
description = "Minimalist Rust syntax parsing for procedural macros"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
repository = "https://github.com/parasyte/myn"
edition = "2021"
keywords = ["macros", "myn"]
categories = ["development-tools::procedural-macro-helpers", "parser-implementations"]
license = "MIT"

[dependencies]
# No dependencies!
