[package]
name = "myn"
description = "Minimalist Rust syntax parsing for procedural macros"
version = "0.2.1"
authors = ["Jay Oster <jay@kodewerx.org>"]
repository = "https://github.com/parasyte/myn"
edition = "2021"
rust-version = "1.58.0"
keywords = ["macros", "myn"]
categories = ["development-tools::procedural-macro-helpers", "parser-implementations"]
license = "MIT"

[dependencies]
# No dependencies!

[dev-dependencies]
proc_macro = { package = "proc-macro2", version = "1" }
